--- a/user_page.html
+++ b/user_page.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
 	<meta name="vieport" content="inital-scale=1.0, width=device-width">
-    <title id="userpage">Picsel&Polygon</title>
+    <title id="userpage">Pixel&Polygon</title>
     <link id="css_style" rel="stylesheet" href="css/style.css">
     <script src="js/chenge_style.js"></script>
         <link rel="shortcut icon" href="icons/logo.ico" type="x-icon">
@@ -59,7 +59,7 @@
                 <img src="images/none.png" alt="">
             </div>
             <div class="item" id="item_2">
-                <img src="/Зображення/sticers/photo_2021-05-15_01-41-37 (2).jpg" alt="">
+                <img src="images/none.png" alt="">
             </div>
             <div class="item" id="item_3">
                 <img src="images/none.png" alt="">
