--- a/work_page.html
+++ b/work_page.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
 	<meta name="vieport" content="inital-scale=1.0, width=device-width">
-    <title>Picsel&Polygon</title>
+    <title>Pixel&Polygon</title>
     <link id="css_style" rel="stylesheet" href="css/style.css">
     <script src="js/chenge_style.js"></script>
         <link rel="shortcut icon" href="icons/logo.ico" type="x-icon">
